--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
+    "sysstat": "^0.2.0",
     "systeminformation": "^5.14.4"
   }
 }
